...
        return StreamValueBuilder<String?>(
          streamValue: _controller.createErrorMessageStreamValue,
          builder: (context, errorMessage) {
            _handleCreateErrorMessage(errorMessage);
            return TenantAdminFormScaffold(
              closePolicy: buildTenantAdminCurrentRouteBackPolicy(context),
              title: 'Criar Organizacao',
              child: SingleChildScrollView(
                child: Form(
                  key: _controller.formKey,
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
...
