...
          builder: (context, error) {
            return StreamValueBuilder<TenantAdminOrganization?>(
              streamValue: _controller.organizationDetailStreamValue,
              builder: (context, organization) {
                return Scaffold(
                  appBar: AppBar(
                    title: const Text('Organizacao'),
                    leading: IconButton(
                      icon: const Icon(Icons.arrow_back),
                      onPressed: backPolicy.handleBack,
                      tooltip: 'Voltar',
                    ),
                  ),
...
